...
    <string name="ribbon_align_right">Align right</string>
    <string name="ribbon_picture">Picture</string>
    <string name="ribbon_picture_device">On device</string>
    <string name="ribbon_picture_online">Search online</string>
    <string name="ribbon_picture_camera">Camera</string>
    <string name="ribbon_link">Link</string>
    <string name="ribbon_link_insert">Insert link</string>
    <string name="ribbon_link_edit">Edit link</string>
    <string name="ribbon_link_text">Text to display</string>
    <string name="ribbon_link_address">Web address</string>
    <string name="ribbon_link_address_example" translatable="false">https://example.com</string>
    <string name="ribbon_link_cancel">Cancel</string>
    <string name="ribbon_link_apply">Apply</string>
...
